--- a/package.json
+++ b/package.json
@@ -22,15 +22,24 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "karma": "^0.13.22",
+    "karma-chrome-launcher": "^0.2.3",
+    "karma-firefox-launcher": "^0.1.7",
+    "karma-mocha": "^0.2.2",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
     "mocha-webpack": "^0.3.0",
+    "phantomjs-prebuilt": "^2.1.7",
     "typescript": "https://github.com/maryo/TypeScript/archive/bindOperator-1.8.tar.gz",
     "typings": "^0.7.11",
+    "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1"
   },
   "scripts": {
     "build": "webpack",
-    "test": "mocha-webpack --webpack-config webpack.config-test.js \"tests/**/*.ts\" --colors",
-    "serve": "webpack-dev-server"
+    "test": "mocha-webpack --webpack-config webpack.config-test.js \"tests/server/**/*.ts\" --colors",
+    "start": "webpack-dev-server"
   }
 }
