- Fixed issue with karma source maps - added empty .tmp directory - added repository field to package.json

--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "babel",
     "webpack"
   ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/vaniocz/typescript-dev-stack.git"
+  },
   "dependencies": {
     "babel-polyfill": "^6.7.4",
     "jquery": "^2.2.2",
@@ -30,6 +34,7 @@
     "karma-mocha": "^0.2.2",
     "karma-mocha-reporter": "^2.0.0",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-source-map-support": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "mocha": "^2.4.5",
