--- a/package.json
+++ b/package.json
@@ -21,11 +21,15 @@
     "whatwg-fetch": "^0.11.0"
   },
   "devDependencies": {
+    "autoprefixer": "^6.3.6",
     "awesome-typescript-loader": "^0.16.2",
     "babel-core": "^6.7.4",
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "copy-webpack-plugin": "^1.1.1",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
     "karma-detect-browsers": "^2.1.0",
@@ -37,9 +41,13 @@
     "karma-source-map-support": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
+    "less": "^2.6.1",
+    "less-loader": "^2.2.3",
     "mocha": "^2.4.5",
     "mocha-webpack": "^0.3.0",
     "phantomjs-prebuilt": "^2.1.7",
+    "postcss-loader": "^0.8.2",
+    "style-loader": "^0.13.1",
     "typescript": "https://github.com/maryo/TypeScript/tarball/bindOperator-1.8",
     "typings": "^0.7.11",
     "webpack": "^1.12.14",
@@ -47,11 +55,11 @@
   },
   "scripts": {
     "postinstall": "node_modules/.bin/typings install",
-    "start": "node_modules/.bin/webpack-dev-server --hot",
+    "start": "node_modules/.bin/webpack-dev-server --hot --content-base ./build",
     "test": "npm run mocha && npm run karma",
     "build": "node_modules/.bin/webpack -p --optimize-occurence-order --optimize-dedupe",
     "build:dev": "node_modules/.bin/webpack -d",
-    "mocha": "node_modules/.bin/mocha-webpack --webpack-config webpack.config-test.js \"tests/server/**/*.ts\" --colors",
+    "mocha": "node_modules/.bin/mocha-webpack --webpack-config webpack.config.js \"tests/server/**/*.ts\" --colors",
     "karma": "node_modules/.bin/karma start",
     "karma:all": "node_modules/.bin/karma start --detectBrowsers"
   }
