--- a/.travis.yml
+++ b/.travis.yml
@@ -7,13 +7,18 @@ node_js:
   - "4.2"
   - "4.1"
   - "4.0"
-  - "0.12"
-  - "0.11"
-  - "0.10"
-  - "0.8"
-  - "0.6"
   - "iojs"
+
+addons:
+    firefox: "latest"
 
 cache:
     directories:
         ~/.npm
+
+script:
+    - npm run lint
+    - npm run mocha
+    - npm run karma:all
+    - npm run build
+    - npm run build:dev
