--- a/.travis.yml
+++ b/.travis.yml
@@ -16,13 +16,12 @@ cache:
         node_modules
 
 before_install:
-    - export CHROME_BIN=chromium-browser
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
 
 script:
     - npm run lint
     - npm run mocha
-    - npm run karma -- --browsers PhantomJS,ChromeTravis,Firefox
+    - npm run karma -- --browsers PhantomJS,Firefox
     - npm run build
     - npm run build:dev
