--- a/.travis.yml
+++ b/.travis.yml
@@ -11,17 +11,15 @@ node_js:
 addons:
     firefox: "latest"
 
-cache:
-    directories:
-        node_modules
-
 before_install:
     - export DISPLAY=:99.0
     - sh -e /etc/init.d/xvfb start
 
 script:
-    - npm run lint
-    - npm run mocha
-    - npm run karma -- --browsers PhantomJS,Firefox
-    - npm run build
-    - npm run build:dev
+    - npm run lint -s
+    - npm test -s
+    - npm run karma:browser -s -- --browsers Firefox
+    - npm run build -s
+    - npm run build:dev -s
+    - npm run mocha:coverage -s
+    - npm run karma:coverage -s
