--- a/package.json
+++ b/package.json
@@ -17,12 +17,18 @@
     "postinstall": "node_modules/.bin/typings install",
     "start": "node_modules/.bin/webpack-dev-server --hot --content-base ./build",
     "test": "npm run mocha && npm run karma",
-    "build": "node_modules/.bin/webpack -p --optimize-occurence-order --optimize-dedupe",
+    "build": "node_modules/.bin/webpack",
     "build:dev": "node_modules/.bin/webpack -d",
     "lint": "node_modules/.bin/tslint \"!(node_modules|typings)/**/*.ts?(x)\"",
-    "mocha": "node_modules/.bin/mocha-webpack --webpack-config webpack.config.js \"tests/server/**/*.ts\" --colors",
+    "mocha": "node_modules/.bin/mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" --colors",
+    "mocha:coverage": "node_modules/.bin/mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" -R mocha-multi --reporter-options spec=-,remap-istanbul/lib/mochaRemapIstanbul=- --colors",
     "karma": "node_modules/.bin/karma start",
-    "karma:all": "node_modules/.bin/karma start --detectBrowsers"
+    "karma:browser": "node_modules/.bin/karma start",
+    "karma:server": "node_modules/.bin/karma start",
+    "karma:coverage": "node_modules/.bin/karma start",
+    "karma:browser:coverage": "node_modules/.bin/karma start",
+    "karma:server:coverage": "node_modules/.bin/karma start",
+    "karma:browser:all": "node_modules/.bin/karma start --detectBrowsers"
   },
   "engines": {
     "node": ">=4"
@@ -41,26 +47,31 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.6.0",
     "chai": "^3.5.0",
+    "chokidar": "^1.4.3",
     "copy-webpack-plugin": "^1.1.1",
     "css-loader": "^0.23.1",
+    "electron-prebuilt": "^0.37.6",
     "extract-text-webpack-plugin": "^1.0.1",
     "karma": "^0.13.22",
     "karma-chrome-launcher": "^0.2.3",
+    "karma-coverage": "^0.5.5",
     "karma-detect-browsers": "^2.1.0",
+    "karma-electron-launcher": "^0.1.0",
     "karma-firefox-launcher": "^0.1.7",
     "karma-ie-launcher": "^0.2.0",
     "karma-mocha": "^0.2.2",
     "karma-mocha-reporter": "^2.0.0",
-    "karma-phantomjs-launcher": "^1.0.0",
     "karma-source-map-support": "^1.1.0",
     "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^1.7.0",
     "less": "^2.6.1",
     "less-loader": "^2.2.3",
+    "minimist": "^1.2.0",
     "mocha": "^2.4.5",
+    "mocha-multi": "^0.9.0",
     "mocha-webpack": "^0.3.0",
-    "phantomjs-prebuilt": "^2.1.7",
     "postcss-loader": "^0.8.2",
+    "remap-istanbul": "https://github.com/maryo/remap-istanbul/tarball/master",
     "style-loader": "^0.13.1",
     "tslint": "^3.7.1",
     "tslint-microsoft-contrib": "^2.0.2",
