--- a/package.json
+++ b/package.json
@@ -1,13 +1,19 @@
 {
   "name": "webstack",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Development stack for building modern web applications or libraries based on webpack using modified TypeScript 1.8 together with Babel (async/await and generators in ES5)",
   "author": "Marek Štípek <mario.dweller@seznam.cz>",
   "license": "MIT",
   "keywords": [
     "typescript",
     "babel",
-    "webpack"
+    "webpack",
+    "react",
+    "karma",
+    "mocha",
+    "coverage",
+    "async",
+    "await"
   ],
   "repository": {
     "type": "git",
@@ -36,7 +42,9 @@
   "dependencies": {
     "babel-polyfill": "^6.7.4",
     "jquery": "^2.2.2",
-    "lodash": "^4.7.0",
+    "lodash": "^4.11.0",
+    "react": "^15.0.1",
+    "react-dom": "^15.0.1",
     "reflect-metadata": "^0.1.3",
     "whatwg-fetch": "^0.11.0"
   },
@@ -72,6 +80,7 @@
     "mocha-multi": "^0.9.0",
     "mocha-webpack": "^0.3.0",
     "postcss-loader": "^0.8.2",
+    "react-hot-loader": "^1.3.0",
     "remap-istanbul": "https://github.com/maryo/remap-istanbul/tarball/master",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
@@ -80,6 +89,7 @@
     "typescript": "https://github.com/maryo/TypeScript/tarball/bindOperator-1.8",
     "typings": "^0.7.11",
     "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1"
+    "webpack-dev-server": "^1.14.1",
+    "webpack-split-by-path": "0.0.8"
   }
 }
