--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,9 @@
     "compilerOptions": {
         "target": "es6",
         "moduleResolution": "node",
-        "noImplicitAny": true,
         "experimentalDecorators": true,
+        "jsx": "react",
+        "noImplicitAny": true,
         "removeComments": true,
         "newLine": "LF",
         "outDir": ".tmp/typescript"
