--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "url": "git://github.com/vaniocz/typescript-dev-stack.git"
   },
   "scripts": {
-    "postinstall": "typings install",
+    "postinstall": "node_modules/.bin/typings install",
     "start": "webpack-dev-server --hot --content-base ./build",
     "test": "npm run mocha && npm run karma",
     "build": "webpack",
@@ -46,7 +46,7 @@
     "react": "^15.0.1",
     "react-dom": "^15.0.1",
     "reflect-metadata": "^0.1.3",
-    "whatwg-fetch": "^0.11.0"
+    "whatwg-fetch": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.3.6",
@@ -87,7 +87,7 @@
     "tslint": "^3.7.1",
     "tslint-microsoft-contrib": "^2.0.2",
     "typescript": "https://github.com/maryo/TypeScript/tarball/bindOperator-1.8",
-    "typings": "^0.7.11",
+    "typings": "^1.0.4",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
     "webpack-split-by-path": "0.0.8"
