Moved to Webpack 2, TypeScript 2.1, Sass instead of Less. Also revised and updated all dependencies.

--- a/package.json
+++ b/package.json
@@ -1,12 +1,14 @@
 {
   "name": "webstack",
-  "version": "0.2.0",
-  "description": "Development stack for building modern web applications or libraries based on webpack using modified TypeScript 1.8 together with Babel (async/await and generators in ES5)",
+  "version": "0.3.0",
+  "description": "Development stack for building modern web applications or libraries based on webpack using TypeScript 2.1.",
   "author": "Marek Štípek <mario.dweller@seznam.cz>",
+  "contributors": [
+    "Adam Hojka"
+  ],
   "license": "MIT",
   "keywords": [
     "typescript",
-    "babel",
     "webpack",
     "react",
     "karma",
@@ -20,14 +22,13 @@
     "url": "git://github.com/vaniocz/typescript-dev-stack.git"
   },
   "scripts": {
-    "postinstall": "node_modules/.bin/typings install",
     "start": "webpack-dev-server --hot --content-base ./build",
     "test": "npm run mocha && npm run karma",
     "build": "webpack",
     "build:dev": "webpack -d",
     "lint": "tslint \"!(node_modules|typings)/**/*.ts?(x)\"",
     "mocha": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" --colors",
-    "mocha:coverage": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" -R mocha-multi --reporter-options spec=-,remap-istanbul/lib/mochaRemapIstanbul=- --colors",
+    "mocha:coverage": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" -R mocha-multi --reporter-options spec=-,mocha-istanbul=- --colors && node -e \"require('fs').renameSync('build/coverage/mocha/html/lcov.info', 'build/coverage/mocha/lcov.info');\"",
     "karma": "karma start",
     "karma:browser": "karma start",
     "karma:server": "karma start",
@@ -37,59 +38,67 @@
     "karma:server:coverage": "karma start"
   },
   "engines": {
-    "node": ">=4"
+    "node": ">=6"
   },
   "dependencies": {
-    "babel-polyfill": "^6.7.4",
-    "jquery": "^2.2.2",
-    "lodash": "^4.11.0",
-    "react": "^15.0.1",
-    "react-dom": "^15.0.1",
-    "reflect-metadata": "^0.1.3",
-    "whatwg-fetch": "^1.0.0"
+    "es6-promise": "^4.0.5",
+    "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "reflect-metadata": "^0.1.9",
+    "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
-    "autoprefixer": "^6.3.6",
-    "awesome-typescript-loader": "^0.16.2",
-    "babel-core": "^6.7.4",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.6.0",
+    "@types/chai": "^3.4.34",
+    "@types/jquery": "^2.0.39",
+    "@types/lodash": "^4.14.50",
+    "@types/mocha": "^2.2.37",
+    "@types/react": "^15.0.0",
+    "@types/react-dom": "^0.14.20",
+    "@types/sinon": "^1.16.34",
+    "@types/webpack-env": "^1.13.0",
+    "@types/whatwg-fetch": "0.0.33",
+    "autoprefixer": "^6.6.1",
+    "awesome-typescript-loader": "^3.0.0-beta.18",
     "chai": "^3.5.0",
-    "chokidar": "^1.4.3",
-    "copy-webpack-plugin": "^1.1.1",
-    "css-loader": "^0.23.1",
-    "electron-prebuilt": "^0.37.6",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "imports-loader": "^0.6.5",
-    "karma": "^0.13.22",
-    "karma-chrome-launcher": "^0.2.3",
-    "karma-coverage": "^0.5.5",
-    "karma-detect-browsers": "^2.1.0",
-    "karma-electron-launcher": "^0.1.0",
-    "karma-firefox-launcher": "^0.1.7",
-    "karma-ie-launcher": "^0.2.0",
-    "karma-mocha": "^0.2.2",
-    "karma-mocha-reporter": "^2.0.0",
-    "karma-source-map-support": "^1.1.0",
+    "chokidar": "^1.6.1",
+    "copy-webpack-plugin": "^4.0.1",
+    "css-loader": "^0.26.1",
+    "electron": "^1.4.14",
+    "extract-text-webpack-plugin": "^2.0.0-beta",
+    "imports-loader": "^0.7.0",
+    "istanbul-instrumenter-loader": "^1.2.0",
+    "karma": "^1.3.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-coverage": "^1.1.1",
+    "karma-detect-browsers": "^2.2.4",
+    "karma-electron-launcher": "https://github.com/princed/karma-electron-launcher/tarball/master",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-ie-launcher": "^1.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-mocha-reporter": "^2.2.1",
+    "karma-remap-coverage": "^0.1.4",
+    "karma-source-map-support": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^1.7.0",
-    "less": "^2.6.1",
-    "less-loader": "^2.2.3",
+    "karma-webpack": "^2.0.1",
     "minimist": "^1.2.0",
-    "mocha": "^2.4.5",
-    "mocha-multi": "^0.9.0",
-    "mocha-webpack": "^0.3.0",
-    "postcss-loader": "^0.8.2",
-    "react-hot-loader": "^1.3.0",
-    "remap-istanbul": "https://github.com/maryo/remap-istanbul/tarball/master",
-    "sinon": "^1.17.3",
+    "mocha": "^3.2.0",
+    "mocha-istanbul": "^0.3.0",
+    "mocha-multi": "^0.10.0",
+    "mocha-webpack": "^1.0.0-beta.1",
+    "node-sass": "^4.3.0",
+    "postcss-loader": "^1.2.2",
+    "react-hot-loader": "^1.3.1",
+    "sane": "^1.5.0",
+    "sass-loader": "https://github.com/jtangelder/sass-loader/tarball/change/webpack-2",
+    "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
-    "tslint": "^3.7.1",
-    "tslint-microsoft-contrib": "^2.0.2",
-    "typescript": "https://github.com/maryo/TypeScript/tarball/bindOperator-1.8",
-    "typings": "^1.0.4",
-    "webpack": "^1.12.14",
-    "webpack-dev-server": "^1.14.1",
-    "webpack-split-by-path": "0.0.8"
+    "tslint": "^4.3.1",
+    "tslint-microsoft-contrib": "^4.0.0",
+    "typescript": "^2.1",
+    "webpack": "^2.2.0-rc.4",
+    "webpack-dev-server": "^2.2.0-rc.0",
+    "webpack-split-by-path": "0.1.0-beta.1"
   }
 }
