--- a/package.json
+++ b/package.json
@@ -81,12 +81,12 @@
     "mocha-webpack": "^0.3.0",
     "postcss-loader": "^0.8.2",
     "react-hot-loader": "^1.3.0",
-    "remap-istanbul": "https://github.com/maryo/remap-istanbul/tarball/master",
+    "remap-istanbul": "github:maryo/remap-istanbul",
     "sinon": "^1.17.3",
     "style-loader": "^0.13.1",
     "tslint": "^3.7.1",
     "tslint-microsoft-contrib": "^2.0.2",
-    "typescript": "https://github.com/maryo/TypeScript/tarball/bindOperator-1.8",
+    "typescript": "github:maryo/TypeScript#bindOperator-1.8",
     "typings": "^1.0.4",
     "webpack": "^1.12.14",
     "webpack-dev-server": "^1.14.1",
