- Fixed build complaining about undefined webpackJsonP - Fixed code coverages, even for JetBrains IDEs - SplitPath for all environments except test - Added NotifierPlugin

--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "build:dev": "webpack -d",
     "lint": "tslint \"!(node_modules|typings)/**/*.ts?(x)\"",
     "mocha": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" --colors",
-    "mocha:coverage": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" -R mocha-multi --reporter-options spec=-,mocha-istanbul=- --colors && node -e \"require('fs').renameSync('build/coverage/mocha/html/lcov.info', 'build/coverage/mocha/lcov.info');\"",
+    "mocha:coverage": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" -R mocha-multi --reporter-options spec=-,mocha-remap-istanbul=- --colors",
     "karma": "karma start",
     "karma:browser": "karma start",
     "karma:server": "karma start",
@@ -60,7 +60,7 @@
     "@types/webpack-env": "^1.13.0",
     "@types/whatwg-fetch": "0.0.33",
     "autoprefixer": "^6.6.1",
-    "awesome-typescript-loader": "^3.0.0-beta.18",
+    "awesome-typescript-loader": "^3.0.0-beta",
     "chai": "^3.5.0",
     "chokidar": "^1.6.1",
     "copy-webpack-plugin": "^4.0.1",
@@ -73,32 +73,30 @@
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
     "karma-detect-browsers": "^2.2.4",
-    "karma-electron-launcher": "https://github.com/princed/karma-electron-launcher/tarball/master",
+    "karma-electron-launcher": "github:princed/karma-electron-launcher",
     "karma-firefox-launcher": "^1.0.0",
     "karma-ie-launcher": "^1.0.0",
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.1",
     "karma-remap-coverage": "^0.1.4",
     "karma-source-map-support": "^1.2.0",
-    "karma-sourcemap-loader": "^0.3.7",
     "karma-webpack": "^2.0.1",
-    "minimist": "^1.2.0",
     "mocha": "^3.2.0",
-    "mocha-istanbul": "^0.3.0",
     "mocha-multi": "^0.10.0",
-    "mocha-webpack": "^1.0.0-beta.1",
+    "mocha-remap-istanbul": "^0.1.0",
+    "mocha-webpack": "^1.0.0-beta",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
     "react-hot-loader": "^1.3.1",
-    "sane": "^1.5.0",
-    "sass-loader": "https://github.com/jtangelder/sass-loader/tarball/change/webpack-2",
+    "sass-loader": "github:jtangelder/sass-loader#change/webpack-2",
     "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
     "tslint": "^4.3.1",
     "tslint-microsoft-contrib": "^4.0.0",
     "typescript": "^2.1",
-    "webpack": "^2.2.0-rc.4",
-    "webpack-dev-server": "^2.2.0-rc.0",
+    "webpack": "^2.2.0",
+    "webpack-dev-server": "^2.2.0",
+    "webpack-notifier": "^1.5.0",
     "webpack-split-by-path": "0.1.0-beta.1"
   }
 }
