--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "webstack",
-  "version": "0.3.0",
-  "description": "Development stack for building modern web applications or libraries based on webpack using TypeScript 2.1.",
+  "name": "typescript-vue-devstack",
+  "version": "0.1.0",
+  "description": "Development stack for building modern web applications based on webpack using TypeScript 2.1 and Vue2.",
   "author": "Marek Štípek <mario.dweller@seznam.cz>",
   "contributors": [
     "Adam Hojka"
@@ -10,7 +10,6 @@
   "keywords": [
     "typescript",
     "webpack",
-    "react",
     "karma",
     "mocha",
     "coverage",
@@ -26,9 +25,9 @@
     "test": "npm run mocha && npm run karma",
     "build": "webpack",
     "build:dev": "webpack -d",
-    "lint": "tslint \"!(node_modules|typings)/**/*.ts?(x)\"",
-    "mocha": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" --colors",
-    "mocha:coverage": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" -R mocha-multi --reporter-options spec=-,mocha-remap-istanbul=- --colors",
+    "lint": "tslint \"src/**/*.ts?(x)\"",
+    "mocha": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" --no-interactive --colors",
+    "mocha:coverage": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" -R mocha-multi --reporter-options spec=-,mocha-remap-istanbul=- --no-interactive --colors",
     "karma": "karma start",
     "karma:browser": "karma start",
     "karma:server": "karma start",
@@ -40,32 +39,21 @@
   "engines": {
     "node": ">=6"
   },
-  "dependencies": {
-    "es6-promise": "^4.0.5",
-    "jquery": "^3.1.1",
-    "lodash": "^4.17.4",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "reflect-metadata": "^0.1.9",
-    "whatwg-fetch": "^2.0.1"
-  },
   "devDependencies": {
     "@types/chai": "^3.4.34",
-    "@types/jquery": "^2.0.39",
     "@types/lodash": "^4.14.50",
     "@types/mocha": "^2.2.37",
-    "@types/react": "^15.0.0",
-    "@types/react-dom": "^0.14.20",
     "@types/sinon": "^1.16.34",
     "@types/webpack-env": "^1.13.0",
     "@types/whatwg-fetch": "0.0.33",
     "autoprefixer": "^6.6.1",
     "awesome-typescript-loader": "^3.0.0-beta",
     "chai": "^3.5.0",
-    "chokidar": "^1.6.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "electron": "^1.4.14",
+    "es6-promise": "^4.0.5",
+    "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "imports-loader": "^0.7.0",
     "istanbul-instrumenter-loader": "^1.2.0",
@@ -81,6 +69,7 @@
     "karma-remap-coverage": "^0.1.4",
     "karma-source-map-support": "^1.2.0",
     "karma-webpack": "^2.0.1",
+    "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "mocha-multi": "^0.10.0",
     "mocha-remap-istanbul": "^0.1.0",
@@ -88,16 +77,19 @@
     "mocha-webpack": "^1.0.0-beta",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
-    "react-hot-loader": "^1.3.1",
     "sass-loader": "github:jtangelder/sass-loader#change/webpack-2",
     "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
     "tslint": "^4.3.1",
     "tslint-microsoft-contrib": "^4.0.0",
     "typescript": "^2.1",
+    "vue": "^2.1.10",
+    "vue-class-component": "^4.4.0",
+    "vue-template-loader": "^0.2.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "webpack-notifier": "^1.5.0",
-    "webpack-split-by-path": "0.1.0-beta.1"
+    "webpack-split-by-path": "0.1.0-beta.1",
+    "whatwg-fetch": "^2.0.1"
   }
 }
