--- a/package.json
+++ b/package.json
@@ -26,9 +26,9 @@
     "test": "npm run mocha && npm run karma",
     "build": "webpack",
     "build:dev": "webpack -d",
-    "lint": "tslint \"!(node_modules|typings)/**/*.ts?(x)\"",
-    "mocha": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" --colors",
-    "mocha:coverage": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" -R mocha-multi --reporter-options spec=-,mocha-remap-istanbul=- --colors",
+    "lint": "tslint \"src/**/*.ts?(x)\"",
+    "mocha": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" --no-interactive --colors",
+    "mocha:coverage": "mocha-webpack --webpack-config webpack.config.js \"tests/runner.js\" -R mocha-multi --reporter-options spec=-,mocha-remap-istanbul=- --no-interactive --colors",
     "karma": "karma start",
     "karma:browser": "karma start",
     "karma:server": "karma start",
@@ -39,15 +39,6 @@
   },
   "engines": {
     "node": ">=6"
-  },
-  "dependencies": {
-    "es6-promise": "^4.0.5",
-    "jquery": "^3.1.1",
-    "lodash": "^4.17.4",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "reflect-metadata": "^0.1.9",
-    "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
     "@types/chai": "^3.4.34",
@@ -62,13 +53,14 @@
     "autoprefixer": "^6.6.1",
     "awesome-typescript-loader": "^3.0.0-beta",
     "chai": "^3.5.0",
-    "chokidar": "^1.6.1",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "electron": "^1.4.14",
+    "es6-promise": "^4.0.5",
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "imports-loader": "^0.7.0",
     "istanbul-instrumenter-loader": "^1.2.0",
+    "jquery": "^3.1.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
@@ -81,13 +73,18 @@
     "karma-remap-coverage": "^0.1.4",
     "karma-source-map-support": "^1.2.0",
     "karma-webpack": "^2.0.1",
+    "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "mocha-multi": "^0.10.0",
     "mocha-remap-istanbul": "^0.1.0",
+    "mocha-typescript": "^1.0.15",
     "mocha-webpack": "^1.0.0-beta",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
+    "reflect-metadata": "^0.1.9",
     "sass-loader": "github:jtangelder/sass-loader#change/webpack-2",
     "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
@@ -97,6 +94,7 @@
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "webpack-notifier": "^1.5.0",
-    "webpack-split-by-path": "0.1.0-beta.1"
+    "webpack-split-by-path": "0.1.0-beta.1",
+    "whatwg-fetch": "^2.0.1"
   }
 }
