--- a/package.json
+++ b/package.json
@@ -40,6 +40,15 @@
   "engines": {
     "node": ">=6"
   },
+  "dependencies": {
+    "es6-promise": "^4.0.5",
+    "jquery": "^3.1.1",
+    "lodash": "^4.17.4",
+    "react": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "reflect-metadata": "^0.1.9",
+    "whatwg-fetch": "^2.0.1"
+  },
   "devDependencies": {
     "@types/chai": "^3.4.34",
     "@types/jquery": "^2.0.39",
@@ -56,11 +65,10 @@
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "electron": "^1.4.14",
-    "es6-promise": "^4.0.5",
+    "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^2.0.0-beta",
     "imports-loader": "^0.7.0",
     "istanbul-instrumenter-loader": "^1.2.0",
-    "jquery": "^3.1.1",
     "karma": "^1.3.0",
     "karma-chrome-launcher": "^2.0.0",
     "karma-coverage": "^1.1.1",
@@ -73,7 +81,6 @@
     "karma-remap-coverage": "^0.1.4",
     "karma-source-map-support": "^1.2.0",
     "karma-webpack": "^2.0.1",
-    "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "mocha-multi": "^0.10.0",
     "mocha-remap-istanbul": "^0.1.0",
@@ -81,10 +88,7 @@
     "mocha-webpack": "^1.0.0-beta",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
     "react-hot-loader": "^1.3.1",
-    "reflect-metadata": "^0.1.9",
     "sass-loader": "github:jtangelder/sass-loader#change/webpack-2",
     "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
@@ -94,7 +98,6 @@
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "webpack-notifier": "^1.5.0",
-    "webpack-split-by-path": "0.1.0-beta.1",
-    "whatwg-fetch": "^2.0.1"
+    "webpack-split-by-path": "0.1.0-beta.1"
   }
 }
