--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "typescript-vue-devstack",
+  "name": "typescript-html-devstack",
   "version": "0.1.0",
   "description": "Development stack for building modern web applications based on webpack using TypeScript 2.1 and Vue2.",
   "author": "Marek Štípek <mario.dweller@seznam.cz>",
@@ -13,8 +13,7 @@
     "karma",
     "mocha",
     "coverage",
-    "async",
-    "await"
+    "html"
   ],
   "repository": {
     "type": "git",
@@ -42,8 +41,6 @@
   "dependencies": {
     "es6-promise": "^4.0.5",
     "lodash": "^4.17.4",
-    "vue": "^2.1.10",
-    "vue-class-component": "^4.4.0",
     "whatwg-fetch": "^2.0.1"
   },
   "devDependencies": {
@@ -56,11 +53,12 @@
     "autoprefixer": "^6.6.1",
     "awesome-typescript-loader": "^3.0.0-beta",
     "chai": "^3.5.0",
-    "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "electron": "^1.4.14",
     "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^2.0.0-beta",
+    "extract-loader": "^0.1.0",
+    "file-loader": "^0.9.0",
+    "html-loader": "^0.4.4",
     "imports-loader": "^0.7.0",
     "istanbul-instrumenter-loader": "^1.2.0",
     "karma": "^1.3.0",
@@ -88,10 +86,10 @@
     "tslint": "^4.3.1",
     "tslint-microsoft-contrib": "^4.0.0",
     "typescript": "^2.1",
-    "vue-template-loader": "^0.2.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "webpack-notifier": "^1.5.0",
+    "webpack-output-ignore-plugin": "0.0.1",
     "webpack-split-by-path": "0.1.0-beta.1"
   }
 }
