--- a/package.json
+++ b/package.json
@@ -54,13 +54,13 @@
     "@types/webpack-env": "^1.13.0",
     "@types/whatwg-fetch": "0.0.33",
     "autoprefixer": "^6.6.1",
-    "awesome-typescript-loader": "^3.0.0-beta",
+    "awesome-typescript-loader": "^3.0.3",
     "chai": "^3.5.0",
     "copy-webpack-plugin": "^4.0.1",
     "css-loader": "^0.26.1",
     "electron": "^1.4.14",
     "exports-loader": "^0.6.3",
-    "extract-text-webpack-plugin": "^2.0.0-beta",
+    "extract-text-webpack-plugin": "^2.0.0-rc.3",
     "imports-loader": "^0.7.0",
     "istanbul-instrumenter-loader": "^1.2.0",
     "karma": "^1.3.0",
@@ -82,16 +82,16 @@
     "mocha-webpack": "^1.0.0-beta",
     "node-sass": "^4.3.0",
     "postcss-loader": "^1.2.2",
-    "sass-loader": "github:jtangelder/sass-loader#change/webpack-2",
+    "sass-loader": "^5.0.0",
     "sinon": "^1.17.7",
     "style-loader": "^0.13.1",
     "tslint": "^4.3.1",
     "tslint-microsoft-contrib": "^4.0.0",
-    "typescript": "^2.1",
+    "typescript": "^2.1.5",
     "vue-template-loader": "^0.2.1",
     "webpack": "^2.2.0",
     "webpack-dev-server": "^2.2.0",
     "webpack-notifier": "^1.5.0",
-    "webpack-split-by-path": "0.1.0-beta.1"
+    "webpack-split-by-path": "^2.0.0"
   }
 }
